# rftg-analyzer

./: .gitignore  .gitmodules  AGENTS.md  HASKELL_PARSER_REWRITE.md  README.md  TRACE_FORMAT.md  cabal.project  config.example.json  reanalyze.sh
engine/: Makefile  README.md  analyzer.c  genscript.c  run-matrix.sh  smoke.c  trace.c  trace.h
parser-hs/: rftg-bga-parser.cabal
parser-hs/app/: Main.hs
parser-hs/src/Rftg/Bga/: Json.hs  State.hs  Types.hs
parser-hs/src/Rftg/Keldon/: Render.hs  Script.hs
parser-hs/src/Rftg/Native/: Render.hs
parser-hs/src/Rftg/Parser/: Action.hs  CardIndex.hs  Common.hs  Draw.hs  Expect.hs  Game.hs  Header.hs  Setup.hs
parser-hs/src/Rftg/Parser/Expect/: HandNames.hs
parser-hs/src/Rftg/Parser/Phase/: Consume.hs  Cursor.hs  Discard.hs  Explore.hs  Payment.hs  PendingDiscard.hs  Place.hs  Produce.hs  Settle.hs  Takeover.hs
parser-hs/src/Rftg/Parser/Power/: DiscardPrestige.hs  Gambling.hs  Scavenger.hs  Search.hs
parser-hs/test/: NativeRenderSpec.hs
server/: app.py  bga.py  cardtext.py  haskell_parser.py  timeline.py
tests/: README.md  test_cached_bga_games_haskell.py
tests/fixtures/bga_games/: 861706925.json  861715231.json  861721277.json  861727322.json  861855362.json  862137252.json  863280285.json  863330216.json  863334059.json  863338664.json  863339996.json  866056246.json  866058532.json  866068600.json  866256009.json  866278441.json  866643405.json  866648057.json  866659365.json  866662810.json  866702989.json  866716815.json  (+29 more)
tools/: anonymize_bga_fixtures.py
ui/: app.js  index.html  style.css
